assessment/Problem_Statement_1/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: <YOUR_DOCKER_REGISTRY>/wisecow:latest
        ports:
        - containerPort: 8080
