assessment/Problem_Statement_1/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
